# FimicsFFmpeg

./: .gitignore  CMakeLists.txt  main.cpp
FFmpeg/: build.sh
FFmpeg/macox/include/libavutil/: ffversion.h
FFmpeg/macox/share/doc/ffmpeg/: developer.html  faq.html  fate.html  ffmpeg-all.html  ffmpeg-bitstream-filters.html  ffmpeg-codecs.html  ffmpeg-devices.html  ffmpeg-filters.html  ffmpeg-formats.html  ffmpeg-protocols.html  ffmpeg-resampler.html  ffmpeg-scaler.html  ffmpeg-utils.html  ffmpeg.html  ffplay-all.html  ffplay.html  ffprobe-all.html  ffprobe.html  general.html  git-howto.html  libavcodec.html  libavdevice.html  libavfilter.html  libavformat.html  libavutil.html  libswresample.html  libswscale.html  mailing-list-faq.html  nut.html  platform.html
src/ffmpeg/: AAC_ADTS.c  FfmpegDemux.c
src/ffmpeg/buffer/: avframe.c  avpacket.c  avpacket.h  main_buffer.c
